Report, auditor & organization

--- a/app/checklists/checklists.html
+++ b/app/checklists/checklists.html
@@ -37,8 +37,8 @@
         </tbody>
     </table>
 </div>
-<div class="row placeholders">
-    <div class="col-xs-12 col-sm-12 placeholder">
+<div class="form-row">
+    <div class="col-md-12 mb-3">
         <input type="button" value="Modifier" class="btn btn-dark" ng-click="modif()" ng-if="!modified">
         <button class="btn btn-success" ng-click="updateChecklist()" ng-if="modified">Sauvegarder</button>
         <button class="btn btn-primary" ng-click="addChecklist()" ng-if="modified">Nouvelle checklist</button>
