--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
 <script src="newOrganization/newOrganization.js"></script>
 <script src="settings/settings.js"></script>
 <script src="checklists/checklists.js"></script>
+<script src="report/report.js"></script>
 <script src="datePicker/datePicker.js"></script>
 <script src="datePickerSimple/datePickerSimple.js"></script>
 <script src="components/version/version.js"></script>
