--- a/app/auditor/auditor.html
+++ b/app/auditor/auditor.html
@@ -1,1 +1,34 @@
 <h1 class="jumbotron-heading">Auditeur</h1>
+
+<div class="form-row">
+    <div class="col-md-6 mb-3">
+        <label>Prénom</label>
+        <input type="text" class="form-control" placeholder="Prénom" ng-model="auditor.firstName" ng-if="modified">
+        <input type="text" class="form-control" placeholder="Prénom" ng-model="auditor.firstName" ng-if="!modified" disabled>
+    </div>
+    <div class="col-md-6 mb-3">
+        <label>Nom</label>
+        <input type="text" class="form-control" placeholder="Nom" ng-model="auditor.lastName" ng-if="modified">
+        <input type="text" class="form-control" placeholder="Nom" ng-model="auditor.lastName" ng-if="!modified" disabled>
+    </div>
+</div>
+<div class="form-row">
+    <div class="col-md-6 mb-3">
+        <label>Téléphone</label>
+        <input type="text" class="form-control" placeholder="Téléphone"  ng-model="auditor.phone" ng-if="modified">
+        <input type="text" class="form-control" placeholder="Téléphone"  ng-model="auditor.phone" ng-if="!modified" disabled>
+    </div>
+    <div class="col-md-6 mb-3">
+        <label>Email</label>
+        <input type="email" class="form-control" placeholder="Email" ng-model="auditor.email" ng-if="modified">
+        <input type="email" class="form-control" placeholder="Email" ng-model="auditor.email" ng-if="!modified" disabled>
+    </div>
+</div>
+<div class="row placeholders">
+    <div class="col-xs-12 col-sm-12 placeholder">
+        <input type="button" value="Modifier" class="btn btn-dark" ng-click="modif()"
+               ng-if="!modified">
+        <button class="btn btn-success" ng-click="updateInfos()" ng-if="modified">Sauvegarder</button>
+        <button class="btn btn-danger" ng-click="cancel()" ng-if="modified">Annuler</button>
+    </div>
+</div>
