--- a/app/newOrganization/newOrganization.html
+++ b/app/newOrganization/newOrganization.html
@@ -2,37 +2,20 @@
 <form name="form" role="form">
     <div class="form-row">
         <div class="col-md-12 mb-3">
-            <label>Nom</label>
+            <label>Nom de l'organisation</label>
             <input type="text" class="form-control" placeholder="Nom" ng-required="true"
                    required>
         </div>
     </div>
     <div class="form-row">
         <div class="col-md-3 mb-3">
-            <label>Adresse</label>
-            <input type="text" class="form-control" placeholder="Adresse" ng-required="true"
+            <label>Nom personne de contact</label>
+            <input type="text" class="form-control" placeholder="Nom" ng-required="true"
                    required>
         </div>
         <div class="col-md-3 mb-3">
-            <label>NPA</label>
-            <input type="text" class="form-control" placeholder="NPA" ng-required="true"
-                   required>
-        </div>
-        <div class="col-md-3 mb-3">
-            <label>Localité</label>
-            <input type="text" class="form-control" placeholder="Localité" ng-required="true"
-                   required>
-        </div>
-        <div class="col-md-3 mb-3">
-            <label>Pays</label>
-            <input type="text" class="form-control" placeholder="Pays" ng-required="true"
-                   required>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="col-md-6 mb-3">
-            <label>Nom de la personne de contact</label>
-            <input type="text" class="form-control" placeholder="Nom de la personne de contact" ng-required="true"
+            <label>Prénom personne de contact</label>
+            <input type="text" class="form-control" placeholder="Prénom" ng-required="true"
                    required>
         </div>
         <div class="col-md-3 mb-3">
