--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,7 @@
 <script src="../node_modules/ui-bootstrap4/dist/ui-bootstrap.js"></script>
 <script src="../node_modules/ui-bootstrap4/dist/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+<script src='bower_components/angular-upload/angular-upload.min.js'></script>
 <script src="popper.min.js"></script>
 </body>
 </html>
