--- a/app/checklists/checklists.html
+++ b/app/checklists/checklists.html
@@ -41,7 +41,7 @@
     <div class="col-md-12 mb-3">
         <input type="button" value="Modifier" class="btn btn-dark" ng-click="modif()" ng-if="!modified">
         <button class="btn btn-success" ng-click="updateChecklist()" ng-if="modified">Sauvegarder</button>
-        <button class="btn btn-primary" ng-click="addChecklist()" ng-if="modified">Nouvelle checklist</button>
+        <button class="btn btn-primary" ng-click="addChecklist()" ng-if="modified">Nouvelle Checklist</button>
         <button class="btn btn-danger" ng-click="cancel()" ng-if="modified">Annuler</button>
     </div>
 </div>
