--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css">
     <!-- Custom styles for this template -->
     <link href="sticky-footer-navbar.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">
 </head>
 <body>
 <header>
@@ -119,5 +120,8 @@
 <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 <script src='bower_components/angular-upload/angular-upload.min.js'></script>
 <script src="popper.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js"></script>
+<script src="bower_components/angular-trix/dist/angular-trix.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular-sanitize.min.js'></script>
 </body>
 </html>
