--- a/app/organizations/organizations.html
+++ b/app/organizations/organizations.html
@@ -10,7 +10,7 @@
     <tbody>
     <tr ng-repeat="organization in organizations" class="clickable-tr" ng-click="goTo(organization.pk_organization)">
         <td>{{organization.name}}</td>
-        <td>{{organization.location}}</td>
+        <td>{{organization.headquartersLocation}}</td>
     </tr>
     </tbody>
 </table>
